feat: adds kafka and user routes for gRPC and REST
